Fixed scrollbar

--- a/tosad-ng-app/src/app/manage/manage.component.scss
+++ b/tosad-ng-app/src/app/manage/manage.component.scss
@@ -7,6 +7,11 @@ h1,h2,h3,h4 {
     color: white;
 }
 
+.scrollable {
+    overflow: auto;
+    height: 500px;
+}
+
 .listItem {
     margin: 10px 0;
     padding: 10px;
@@ -23,6 +28,11 @@ h1,h2,h3,h4 {
 
 .right {
     float: right;
+}
+
+.emptyCol {
+    color: #414141;
+    font-style: italic;
 }
 
 .btn-small {
@@ -82,4 +92,16 @@ h1,h2,h3,h4 {
     border-top: none;
     border: none;
     border-radius: 6px;
+}
+
+// Custom scrollbar
+::-webkit-scrollbar {
+    // scroll-padding-left: 3px;
+    width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #414141;
+    border-left: 3px solid transparent;
+    background-clip: padding-box;
 }
